# xiyouji-rela-map

./: .augmentignore  .augmentmemories  .env.example  .eslintrc.json  .gitignore  DEPLOYMENT.md  LICENSE  README.md  RELEASE_NOTES_v1.2.1.md  TECH_STACK_ARCHITECTURE.md  TECH_STACK_REPORT.md  arc.md  check_missing_characters.ps1  current-server.js  dataServer.js  final_verification.ps1  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run_guide.md  tsconfig.json  vercel.json  verify_data_consistency.ps1  vite.config.ngrok.ts  vite.config.ts  前置准备.canvas  项目结构与_experiments目录说明.md
.kilocode/: mcp.json
.obsidian/: community-plugins.json  core-plugins.json  graph.json  workspace.json
.roo/: mcp.json
.smart-env/: smart_env.json
Excalidraw/: Drawing 2025-05-14 21.57.18.excalidraw.md  Drawing 2025-05-15 00.25.35.excalidraw.md
_experiments/: performance-analysis.json
data/: characters.db  events.db  《西游记》关系图谱分类体系.md  关系图谱分类大纲.md
docs/: BVH_OPTIMIZATION_GUIDE.md  LANDING.md  MODEL_MANAGEMENT.md  api.md  database-architecture-guide.md  idea.md  visualization-architecture-diagram.md
example/: 孙悟空笔记模板.md
nlp_tools/: .gitignore
refer/: deepseek.html  deepseek_2.html
scripts/: artifact_template.json  artifact_template_updated.json  check-events-db.js  (+15 more)
tools/nlp_tools/nlp_tools/: README.md  pyproject.toml
tools/nlp_tools/nlp_tools/src/nlp_tools/: crew.py
tools/nlp_tools/nlp_tools/src/nlp_tools/config/: agents.yaml  tasks.yaml
tools/nlp_tools/nlp_tools/src/nlp_tools/tools/: __init__.py  file_system_tools.py  rename_move_tool.py
(+1835 files in other folders)
