[project]
name = "nlp_tools"
version = "0.1.0"
description = "nlp_tools using crewAI"
authors = [{ name = "Weisiren", email = "cxyvsir04@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
nlp_tools = "nlp_tools.main:run"
run_crew = "nlp_tools.main:run"
train = "nlp_tools.main:train"
replay = "nlp_tools.main:replay"
test = "nlp_tools.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
